<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    tools:context="fragment.PatientDoctorChangeFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_name_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="37sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="12dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_name"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edt_surname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_surname"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edt_patronymic"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_patronymic"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edt_age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_age"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_phone_number"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/edit_email"
        android:textSize="15sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/pale_blue"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_client"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:background="@color/turquoise_blue"
        android:textSize="15sp" />

</LinearLayout>