<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    tools:context="fragment.DayAddFragment"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_day"
        android:textSize="37sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_date_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/day"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/pale_blue"
            android:layout_marginHorizontal="7dp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/edt_date_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/month"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/pale_blue"
            android:layout_marginHorizontal="7dp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/edt_date_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/year"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/pale_blue"
            android:layout_marginHorizontal="7dp"
            android:maxLength="2"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_day"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@color/turquoise_blue"
        android:textSize="15sp"
        android:text="@string/add_day"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp" />

</LinearLayout>